--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,33 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# =========================
+# MPC FILES
+# =========================
+
+#FOLDERS
+
+_private/
+bs/
+downloads/
+img/
+
+
+#RANDOM FILES
+devindex.html
+test.html
+test2.html
+testb.html
+TODO
+ChangeLog (Church Website)
+
+#CSS
+css/test.css
+css/test2.css
+css/testb.css
+
+#JS
+js/testb.js
+
