Fixed issue with MPC not adding the right content and now MPC will put modals into group page

--- a/MPC/Config.ini
+++ b/MPC/Config.ini
@@ -5,6 +5,7 @@
 Header = templates\head.html
 Footer = templates\foot.html
 NavBar = templates\nav.html
+Modal = templates\modals.html
 
 ;Page location and actual page list
 [Sources]
@@ -14,8 +15,3 @@ Pages = index.html,future.html,people.html,groups.html,find.html,worship.html,le
 ;Where do I put the data?
 Publish = C:\Users\Ewan\Documents\Church\Church Website\DEV\publish\
 
-;Specific Tag information
-[Tags]
-Link = {LINK}
-Head = {HEAD}
-Foot = {FOOT}
