Publish command now implemented with MPC. Also updated Footer with year to test functionality

--- a/MPC/Config.ini
+++ b/MPC/Config.ini
@@ -15,3 +15,5 @@ Pages = index.html,future.html,people.html,groups.html,find.html,worship.html,le
 ;Where do I put the data?
 Publish = C:\Users\Ewan\Documents\Church\Church Website\DEV\publish\
 
+[FTP]
+Username = a4599717
