Added missing image files. Compile command now copies design files to publish directory after page compliation

--- a/MPC/Config.ini
+++ b/MPC/Config.ini
@@ -10,6 +10,8 @@ Modal = templates\modals.html
 ;Page location and actual page list
 [Sources]
 Source = C:\Users\Ewan\Documents\Church\Church Website\DEV\website\
+Design = C:\Users\Ewan\Documents\Church\Church Website\DEV\design\
+Folders = css,js,img,downloads
 Pages = index.html,future.html,people.html,groups.html,find.html,worship.html,legal.html
 
 ;Where do I put the data?
