Added missing image files. Compile command now copies design files to publish directory after page compliation

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ Temporary Items
 # MPC FILES
 # =========================
 
-#FOLDERS
+#FOLDERSs
 publish/
 
 website/_private/
@@ -78,4 +78,5 @@ Changelog (Church Website)
 bin/
 obj/
 MPC/MPC/Config.ini
-MPC/MPC/Config.ini
+
+design/downloads/
